--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -1,1 +1,20 @@
-<p>postlist works!</p>
+<div class="card">
+    <p-table [value]="PostListdata" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>slug</th>
+               
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-product>
+            <tr>
+                <td>{{ product.id }}</td>
+                <td>{{ product.title }}</td>
+                <td>{{ product.slug }}</td>
+              
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
