--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<p-button label="Submit" />
-
+<app-header></app-header>
+<app-sidebar></app-sidebar>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
