--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header class="w-full surface-ground">
+     <div class="m-auto	w-9 flex justify-content-between align-content-center"> 
+       <h1>Blog Admin</h1>
+       <div class="top-menu"><i class="pi pi-user" style="font-size: 2.5rem"></i></div>
+    </div>
+
+</header>
