--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<footer class="w-full  surface-ground">
+    <div class="m-auto	w-9 flex-wrap justify-content-center align-content-center"> <p class="text-center">copyrigh text</p></div>
+   
+</footer>
