--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
-<app-sidebar></app-sidebar>
-<router-outlet></router-outlet>
+    <div class="main-container flex w-9 m-auto">
+     <div class="sidebar"><app-sidebar></app-sidebar></div>
+     <div class="content-area"><router-outlet></router-outlet></div>
+    </div>
 <app-footer></app-footer>
