--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
+.content-area{
+    width: 70%;
+}
