--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -1,10 +1,11 @@
-<div class="card">
-    <p-table [value]="PostListdata" [tableStyle]="{ 'min-width': '50rem' }">
+<div class="card m-2">
+    <p-table [value]="PostListdata" [tableStyle]="{ 'width': '100%' }"  class="custom-table"  styleClass="p-datatable-gridlines" >
         <ng-template pTemplate="header">
             <tr>
                 <th>ID</th>
                 <th>Title</th>
                 <th>slug</th>
+                <th>Actions</th>
                
             </tr>
         </ng-template>
@@ -13,8 +14,25 @@
                 <td>{{ product.id }}</td>
                 <td>{{ product.title }}</td>
                 <td>{{ product.slug }}</td>
-              
+                <td><a  (click)="showDialog()"><i class="pi-file-edit pi"></i>Quit Edit</a></td>
             </tr>
         </ng-template>
     </p-table>
 </div>
+
+
+<p-dialog header="Edit Profile" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+    <span class="p-text-secondary block mb-5">Update your information.</span>
+    <div class="flex align-items-center gap-3 mb-3">
+        <label for="username" class="font-semibold w-6rem">Username</label>
+        <input pInputText id="username" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex align-items-center gap-3 mb-5">
+        <label for="email" class="font-semibold w-6rem">Email</label>
+        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex justify-content-end gap-2">
+        <p-button label="Cancel" severity="secondary" (onClick)="visible = false" />
+        <p-button label="Save" (onClick)="visible = false" />
+    </div>
+</p-dialog>
