--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
 .content-area{
-    width: 70%;
+    width: 100%;
 }
+/* .custom-table {
+    background-color: #ffffff;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+  
+  :host ::ng-deep .custom-table .p-datatable-thead > tr > th {
+    background-color: #f0f0f0;
+    color: #444;
+  }
+  
+  :host ::ng-deep .custom-table .p-datatable-tbody > tr > td {
+    background-color: #ffffff;
+    color: #333;
+    padding: 12px;
+  } */
+  
