--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -25,7 +25,7 @@
 <p-dialog header="Post Quick Edit" [modal]="true" [(visible)]="visible" [style]="{ width: '50rem' }">
     <form [formGroup]="postquickedit">
         <label for="ptitle">Post Title:</label>
-        <input id="ptitle" type="text" formControlName="post_tile">
+        <input id="ptitle" type="text" formControlName="post_title">
      
       </form>
 </p-dialog>
