--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -14,7 +14,10 @@
                 <td>{{ product.id }}</td>
                 <td>{{ product.title }}</td>
                 <td>{{ product.slug }}</td>
-                <td><a (click)="showDialog(product.id)"><i class="pi pi-file-edit"></i></a></td>
+                <td>
+                    <a (click)="showDialog(product.id)"><i class="pi pi-file-edit"></i></a>
+                    <a [routerLink]="['edit-post', product.id]">Edit</a>
+                </td>
 
             </tr>
         </ng-template>
