--- a/src/app/posts/postedit/postedit.component.html
+++ b/src/app/posts/postedit/postedit.component.html
@@ -8,7 +8,7 @@
     <label for="post_content" class="col-fixed" style="width:100px">Post Content:</label>
     <textarea  rows="4" cols="50" id="post_content" formControlName="post_content" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary"></textarea>
   </div>
-  
+  <input type="hidden" formControlName="post_id">
     <p-button type="submit" label="Submit" />
 
   </form>
