--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,9 @@
 <header class="w-full surface-ground">
      <div class="m-auto	w-9 flex justify-content-between align-content-center"> 
-       <h1>Blog Admin</h1>
+      <div class="flex"> <h1>Blog Admin</h1> 
+        <!-- <p-button  icon="pi pi-arrow-right"></p-button> -->
+      </div>
+      
        <div class="top-menu flex align-content-center justify-content-between flex-wrap"><i class="pi pi-user" style="font-size: 1.5rem"></i></div>
     </div>
 </header>
