--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-.content-area{
+/* .content-area{
     width: 100%;
-}
+} */
 /* .custom-table {
     background-color: #ffffff;
     border-radius: 10px;
