--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="w-full surface-ground">
      <div class="m-auto	w-9 flex justify-content-between align-content-center"> 
-      <div class="flex"> <h1>Blog Admin</h1> 
+      <div class="flex"> <h1 class="text-blue-600">Blog Admin</h1> 
         <!-- <p-button  icon="pi pi-arrow-right"></p-button> -->
       </div>
       
