--- a/src/app/posts/postedit/postedit.component.html
+++ b/src/app/posts/postedit/postedit.component.html
@@ -23,6 +23,11 @@
 
     </div>
 
+    <div class="field grid">
+      <label for="select_status" class="col-fixed" style="width:100px">Select status:</label>
+      
+      </div>
+
   <input type="hidden" formControlName="post_id">
     <p-button type="submit" label="Submit" />
 
