--- a/src/app/posts/postedit/postedit.component.html
+++ b/src/app/posts/postedit/postedit.component.html
@@ -14,8 +14,8 @@
   <div class="field grid">
     <label for="post_content" class="col-fixed" style="width:100px">Post Categories:</label>
     <p-listbox 
-    [options]="cities" 
-    formControlName="selectedCities" 
+    [options]="category_list" 
+    formControlName="selectedCategory" 
     optionLabel="name" 
     [multiple]="true" 
     styleClass="w-full">
@@ -25,7 +25,13 @@
 
     <div class="field grid">
       <label for="select_status" class="col-fixed" style="width:100px">Select status:</label>
-      <p-dropdown formControlName="select_status" [options]="post_status" optionLabel="name" styleClass="w-full"></p-dropdown>
+      <p-dropdown 
+          formControlName="select_status" 
+          [options]="post_status" 
+          optionLabel="name" 
+          placeholder="Select Status"
+          styleClass="w-full">
+      </p-dropdown>
       </div>
 
   <input type="hidden" formControlName="post_id">
