Design the post edit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+
 <div class="flex flex-row min-h-screen">
     <!-- Sidebar with fixed 25% width -->
     <div class="sidebar" style="flex: 0 0 20%; max-width: 20%; background-color: #f4f4f4;">
@@ -9,6 +10,7 @@
     <div class="main-container flex flex-column" style="flex: 1; background-color: #ffffff;">
     
       <div class="content-area" style="flex: 1; padding: 16px;">
+       <p-toast></p-toast>
         <router-outlet></router-outlet>
       </div>
       <!-- <app-footer></app-footer> -->
