--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -1,36 +1,90 @@
-<div class="card m-2">
-    <p-table [value]="PostListdata" [tableStyle]="{ 'width': '100%' }"  class="custom-table"  styleClass="p-datatable-gridlines" >
+<div class="card surface-0 shadow-1 border-round m-2">
+    <p-table 
+        [value]="PostListdata" 
+        [tableStyle]="{ 'min-width': '50rem' }"
+        styleClass="p-datatable-sm p-datatable-gridlines p-datatable-striped"
+        [paginator]="true" 
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [rowsPerPageOptions]="[10,25,50]"
+        responsiveLayout="scroll">
+        
         <ng-template pTemplate="header">
-            <tr>
-                <th>ID</th>
-                <th>Title</th>
-                <th>slug</th>
-                <th>Actions</th>
-               
+            <tr class="flex w-full">
+                <th class="flex-shrink-0 w-2 text-left">ID</th>
+                <th class="flex-grow-1 w-5 text-left">Title</th>
+                <th class="flex-grow-1 w-4 text-left">Slug</th>
+                <th class="flex-shrink-0 w-2 text-center">Actions</th>
             </tr>
         </ng-template>
+        
         <ng-template pTemplate="body" let-product>
-            <tr>
-                <td>{{ product.id }}</td>
-                <td>{{ product.title }}</td>
-                <td>{{ product.slug }}</td>
-                <td>
-                    <a (click)="showDialog(product.id)"><i class="pi pi-file-edit"></i></a>
-                    <a [routerLink]="['edit-post', product.id]">Edit</a>
+            <tr class="flex w-full">
+                <td class="flex-shrink-0 w-2">{{ product.id }}</td>
+                <td class="flex-grow-1 w-5">{{ product.title }}</td>
+                <td class="flex-grow-1 w-4">{{ product.slug }}</td>
+                <td class="flex-shrink-0 w-2">
+                    <div class="flex gap-2 justify-content-center">
+                        <button 
+                            pButton 
+                            pRipple 
+                            type="button" 
+                            icon="pi pi-file-edit" 
+                            (click)="showDialog(product.id)"
+                            class="p-button-rounded p-button-text"
+                            pTooltip="Quick Edit"
+                            tooltipPosition="top">
+                        </button>
+                        
+                        <button 
+                            pButton 
+                            pRipple 
+                            type="button" 
+                            icon="pi pi-pencil" 
+                            [routerLink]="['edit-post', product.id]"
+                            class="p-button-rounded p-button-text"
+                            pTooltip="Full Edit"
+                            tooltipPosition="top">
+                        </button>
+                    </div>
                 </td>
-
             </tr>
         </ng-template>
     </p-table>
 </div>
 
 
-<p-dialog header="Post Quick Edit" [modal]="true" [(visible)]="visible" [style]="{ width: '50rem' }">
+<p-dialog 
+    header="Post Quick Edit" 
+    [modal]="true" 
+    [(visible)]="visible" 
+    [style]="{ width: '25rem' }"
+    [closable]="true">
+    
     <form [formGroup]="postquickedit" (ngSubmit)="onSubmit()">
-        <label for="ptitle">Post Title:</label>
-        <input id="ptitle" type="text" formControlName="post_title">
+        <div class="field">
+            <label for="ptitle" class="block mb-2">Post Title:</label>
+            <input 
+                id="ptitle" 
+                type="text" 
+                pInputText 
+                formControlName="post_title"
+                class="w-full">
+        </div>
+        
         <input id="post_id" type="hidden" formControlName="post_id">
-        <p-button label="Submit" type="submit"></p-button>
-
-      </form>
+        
+        <div class="mt-3 text-right">
+            <button 
+                pButton 
+                type="submit"
+                label="Submit"
+                [style]="{
+                    'background-color': '#9c27b0',
+                    'border': 'none'
+                }">
+            </button>
+        </div>
+    </form>
 </p-dialog>
