--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -1,4 +1,44 @@
 <div class="card surface-0 shadow-1 border-round m-2">
+    <div class="flex justify-content-start align-items-stretch mb-3">
+    
+        <button 
+            pButton 
+            pRipple 
+            type="button" 
+          
+            label="All Posts"
+            icon="pi pi-list" 
+          
+            class="p-button-outlined p-button-sm ml-3"
+            (click)="poststatus('any')"
+            styleClass="p-button-outlined p-button-sm  ml-3">
+        </button>
+
+        <button 
+        pButton 
+        pRipple 
+        type="button" 
+        label="Draft"
+        icon="pi pi-list" 
+        class="p-button-outlined p-button-sm ml-3"
+        (click)="poststatus('draft')"
+        styleClass="p-button-outlined p-button-sm  ml-3">
+      
+    </button>
+
+    <button 
+    pButton 
+    pRipple 
+    type="button" 
+    label="published"
+    icon="pi pi-list" 
+    class="p-button-outlined p-button-sm ml-3"
+    (click)="poststatus('publish')"
+    styleClass="p-button-outlined p-button-sm m-3">
+  
+</button>
+
+    </div>
     <p-table 
         [value]="PostListdata" 
         [tableStyle]="{ 'min-width': '50rem' }"
