Loader added to post edit form

--- a/src/app/posts/postedit/postedit.component.html
+++ b/src/app/posts/postedit/postedit.component.html
@@ -1,7 +1,14 @@
 <div class="card p-4">
   <h2 class="text-center mb-4">Edit Post</h2>
 
-  <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
+  <div *ngIf="isLoading" class="overlay-spinner">
+    <p-progressSpinner styleClass="custom-spinner" strokeWidth="4" animationDuration="1s" aria-label="Loading" />
+  </div>
+  <ng-template [ngIf]="!isLoading">
+    <ng-container *ngTemplateOutlet="postEditForm"></ng-container>
+  </ng-template>
+  <ng-template #postEditForm>
+    <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
     <!-- Post Title -->
     <div class="p-fluid p-formgrid p-grid mb-4">
       <div class="p-field p-col-12 p-md-4">
@@ -93,6 +100,7 @@
     <div class="text-center">
       <p-button type="submit" label="Submit" icon="pi pi-check" class="p-button-success w-full sm:w-auto" />
     </div>
-  </form>
+    </form>
+  </ng-template>
 </div>
 
