api url changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
       <p-toast></p-toast>
       <router-outlet></router-outlet>
     </div>
-    <!-- <app-footer></app-footer> -->
+  
   </div>
 </div>
+<app-footer></app-footer>
