--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,14 +1,3 @@
-<div class="sidebar-container w-full">
-    <!-- <p-sidebar 
-    [(visible)]="sidebarVisible"  
-    class="p-sidebar-md"
-    [showCloseIcon]="false" 
-  
-    [baseZIndex]="10000"
-    >
-   
-    </p-sidebar> -->
-    <p-panelMenu [model]="items" styleClass="w-full flex-grow"  />
-
-    <!-- <p-button (onClick)="sidebarVisible = true" icon="pi pi-arrow-right"></p-button> -->
+<div class="sidebar-container">
+   <p-panelMenu [model]="items" styleClass=""  />
 </div>
