--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,14 @@
 <header class="w-full surface-ground">
      <div class="m-auto	w-9 flex justify-content-between align-content-center"> 
-      <div class="flex"> <h1 class="text-blue-600">Blog Admin</h1> 
-        <!-- <p-button  icon="pi pi-arrow-right"></p-button> -->
+     
+      <div class="flex flex-row align-items-center gap-3"> 
+        <a> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" class="text-blue-600">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+      </svg></a>
+        <h1 class="text-blue-600">Blog Admin</h1> 
+ 
+
+        
       </div>
       
        <div class="top-menu flex align-content-center justify-content-between flex-wrap gap-3">
